# opentok-encoder-demo

./: .gitignore  CMakeLists.txt  Dockerfile.cpp-env  README.md
doc/: object_model.puml
src/: logger.cpp  logger.hpp  main.cpp  opentok_client.cpp  opentok_client.hpp  otk_thread.c  otk_thread.h
